Convert from bitsets to Arraylist. The number of primes vs the size/index of primes makes makes a list more efficient - and probably more so with some upcoming work on prefix base lists. Some fixes required for the nprime processing are still needed after this commit.